[gd_scene load_steps=13 format=3 uid="uid://bdh0cqv4kt8t8"]

[ext_resource type="Script" uid="uid://0fd45svuoep0" path="res://scripts/basic_enemy.gd" id="1_x18ab"]
[ext_resource type="Script" uid="uid://1onom427w75x" path="res://addons/godot_state_charts/state_chart.gd" id="2_5wlrk"]
[ext_resource type="Resource" uid="uid://b6pb1lrpq3m4j" path="res://resources/basic_enemy_settings.res" id="2_ariuf"]
[ext_resource type="Script" uid="uid://bh5mwh2bdpykw" path="res://addons/godot_state_charts/compound_state.gd" id="3_ah54x"]
[ext_resource type="Script" uid="uid://dh1uwqry00tmb" path="res://addons/godot_state_charts/atomic_state.gd" id="4_oaeau"]
[ext_resource type="Script" uid="uid://dkafc37182inw" path="res://addons/godot_state_charts/transition.gd" id="5_2ibju"]
[ext_resource type="PackedScene" uid="uid://bynac0hhi7qsd" path="res://scenes/catapult_2.tscn" id="7_uccmc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_syuvx"]
size = Vector3(0.380127, 0.338867, 0.565674)

[sub_resource type="Animation" id="Animation_yacee"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D/catapult:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, 0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_o3iuq"]
resource_name = "despawn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D/catapult:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.5, 0.5, 0.5), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_62le1"]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D/catapult:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.5, 0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ouko3"]
_data = {
&"RESET": SubResource("Animation_yacee"),
&"despawn": SubResource("Animation_o3iuq"),
&"spawn": SubResource("Animation_62le1")
}

[node name="Enemy01" type="Node3D"]
script = ExtResource("1_x18ab")
enemy_settings = ExtResource("2_ariuf")

[node name="EnemyStateChart" type="Node" parent="."]
script = ExtResource("2_5wlrk")

[node name="CompoundState" type="Node" parent="EnemyStateChart"]
script = ExtResource("3_ah54x")
initial_state = NodePath("Spawning")

[node name="Spawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="ToTravellingState" type="Node" parent="EnemyStateChart/CompoundState/Spawning"]
script = ExtResource("5_2ibju")
to = NodePath("../../Travelling")
event = &"to_travelling_state"

[node name="Travelling" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="ToDamagingState" type="Node" parent="EnemyStateChart/CompoundState/Travelling"]
script = ExtResource("5_2ibju")
to = NodePath("../../Damaging")
event = &"to_damaging_state"

[node name="ToDyingState" type="Node" parent="EnemyStateChart/CompoundState/Travelling"]
script = ExtResource("5_2ibju")
to = NodePath("../../Dying")
event = &"to_dying_state"

[node name="Damaging" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="ToDespawningState" type="Node" parent="EnemyStateChart/CompoundState/Damaging"]
script = ExtResource("5_2ibju")
to = NodePath("../../Despawning")
event = &"to_despawning_state"

[node name="Dying" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="ToRemoveEnemyState" type="Node" parent="EnemyStateChart/CompoundState/Dying"]
script = ExtResource("5_2ibju")
to = NodePath("../../RemoveEnemy")
event = &"to_remove_enemy_state"

[node name="Despawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="ToRemoveEnemyState" type="Node" parent="EnemyStateChart/CompoundState/Despawning"]
script = ExtResource("5_2ibju")
to = NodePath("../../RemoveEnemy")
event = &"to_remove_enemy_state"

[node name="RemoveEnemy" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="Path3D" type="Path3D" parent="."]

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
transform = Transform3D(0.999972, 0, 0, 0, 0.999989, 0, 0, 0, 0.999978, 0, 0, 0)

[node name="catapult" parent="Path3D/PathFollow3D" instance=ExtResource("7_uccmc")]
transform = Transform3D(-0.5, 0, -7.54979e-08, 0, 0.5, 0, 7.54979e-08, 0, -0.5, 0, -0.07, 0)

[node name="Area3D" type="Area3D" parent="Path3D/PathFollow3D"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path3D/PathFollow3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 0.999965, 0, 0, 0, 0.999965, 0.0057373, 0.102059, 0.0467519)
shape = SubResource("BoxShape3D_syuvx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ouko3")
}

[connection signal="state_entered" from="EnemyStateChart/CompoundState/Spawning" to="." method="_on_spawning_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Travelling" to="." method="_on_travelling_state_entered"]
[connection signal="state_processing" from="EnemyStateChart/CompoundState/Travelling" to="." method="_on_travelling_state_processing"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Damaging" to="." method="_on_damaging_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Dying" to="." method="_on_dying_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Despawning" to="." method="_on_despawning_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/RemoveEnemy" to="." method="_on_remove_enemy_state_entered"]
